--- a/index.html
+++ b/index.html
@@ -14,8 +14,30 @@
 <body>
 
 
+  <div class="container pt-3">
+    <div class="row">
+      <div class="col-6">
+        <input type="search" class="form-control" placeholder="Search City..." aria-label="Search" id="serch-el">
+      </div>
+      <div class="col-3">
+        <button class="btn btn-outline-primary">search</button>
+      </div>
+      <div class="col-3">
+        <select class="form-select" aria-label="Default select example">
+          <option value="1">En</option>
+          <option value="2">Si</option>
+          <option value="3">Tam</option>
+        </select </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
   <!-- Footer -->
-  <div class="container">
+  <div class="container fixed-bottom z-0">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
