--- a/index.html
+++ b/index.html
@@ -4,34 +4,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <title>Weather</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="icon" type="image/x-icon" href="favicon.png" />
-  <title>Weather</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
 </head>
 
 <body>
 
-
   <div class="container pt-3">
     <div class="row">
       <div class="col-6">
-        <input type="search" class="form-control" placeholder="Search City..." aria-label="Search" id="serch-el">
+        <input type="text" class="form-control" placeholder="Search City..." id="cityInput">
       </div>
       <div class="col-3">
-        <button class="btn btn-outline-primary">search</button>
+        <button class="btn btn-outline-primary" id="searchBtn">Search</button>
       </div>
       <div class="col-3">
-        <select class="form-select" aria-label="Default select example">
+        <select class="form-select" id="languageSelect">
           <option value="1">En</option>
           <option value="2">Si</option>
           <option value="3">Tam</option>
-        </select </div>
+        </select>
       </div>
     </div>
   </div>
-
 
   <!-- Footer -->
   <div class="container fixed-bottom z-0">
@@ -62,10 +59,14 @@
     </footer>
   </div>
 
-  <script src="./js/app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"
+    integrity="sha256-sw0iNNXmOJbQhYFuC9OF2kOlD5KQKe1y5lfBn4C9Sjg=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="./js/autocomplete.js"></script>
 </body>
 
 </html>
