--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     </footer>
   </div>
 
+
+
+  <!-- Script files -->
+
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"
