--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
     </div>
   </div>
 
+
+  <!-- Card -->
+  <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-4">
+    <div class="col">
+      <div class="container-fluid pt-3">
+        <div class="card text-center rounded-4 shadow-lg overflow-hidden">
+          <div class="card-body">
+            <h3 class="card-subtitle mb-2 text-body-secondary" id="location-name"></h3>
+            <h1 class="card-title display-2" id="temp"><sup>&nbsp;o</sup></h1>
+            <p class="card-text" id="txt-el"></p>
+            <span href="#" class="card-link">LAT: <span id="lat"></span></span>
+            <span href="#" class="card-link">LON: <span id="lon"></span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
   <!-- Footer -->
   <div class="container fixed-bottom z-0">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
@@ -71,6 +91,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="./js/autocomplete.js"></script>
+  <script src="./js/geoLocation.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
