--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
+
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
         <input type="text" class="form-control" placeholder="Search City..." id="cityInput">
       </div>
       <div class="col-3">
-        <button class="btn btn-outline-primary" id="searchBtn">Search</button>
+        <button class="btn btn-outline-primary" id="search-btn" onclick="run()">Search</button>
       </div>
       <div class="col-3">
         <select class="form-select" id="languageSelect">
@@ -38,7 +40,7 @@
         <div class="card text-center rounded-4 shadow-lg overflow-hidden">
           <div class="card-body">
             <h3 class="card-subtitle mb-2 text-body-secondary" id="location-name"></h3>
-            <h1 class="card-title display-2" id="temp"><sup>&nbsp;o</sup></h1>
+            <h1 class="card-title display-2" id="temp"></h1>
             <p class="card-text" id="txt-el"></p>
             <span href="#" class="card-link">LAT: <span id="lat"></span></span>
             <span href="#" class="card-link">LON: <span id="lon"></span></span>
@@ -87,12 +89,17 @@
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.min.js"
     integrity="sha256-sw0iNNXmOJbQhYFuC9OF2kOlD5KQKe1y5lfBn4C9Sjg=" crossorigin="anonymous"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="./js/autocomplete.js"></script>
   <script src="./js/geoLocation.js"></script>
   <script src="./js/app.js"></script>
+  <script src="./js/autocomplete.js"></script>
+
+
+
+
 </body>
 
 </html>
