add mode = cors & add language v1

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </div>
       <div class="col-3">
         <select class="form-select" id="languageSelect">
-          <option value="1">En</option>
-          <option value="2">Si</option>
-          <option value="3">Tam</option>
+          <option value="en">En</option>
+          <option value="si">Si</option>
+          <option value="tam">Tam</option>
         </select>
       </div>
     </div>
