--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </div>
       <div class="col-3">
         <select class="form-select" id="languageSelect">
+          <option selected>Language</option>
           <option value="en">En</option>
           <option value="si">Si</option>
           <option value="tam">Tam</option>
