--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 
 
 </head>
@@ -41,10 +42,10 @@
         <div class="card text-center rounded-4 shadow-lg overflow-hidden">
           <div class="card-body">
             <h3 class="card-subtitle mb-2 text-body-secondary" id="location-name"></h3>
-            <h1 class="card-title display-2" id="temp"></h1>
+            <span class="card-title display-2" id="temp">--</span>
             <p class="card-text" id="txt-el"></p>
-            <span href="#" class="card-link">LAT: <span id="lat"></span></span>
-            <span href="#" class="card-link">LON: <span id="lon"></span></span>
+            <span href="#" class="card-link text-danger">H:<span id="high"></span></span>
+            <span href="#" class="card-link text-success">L:<span id="low"></span></span>
           </div>
         </div>
       </div>
