--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <!-- Card -->
   <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-4">
     <div class="col">
-      <div class="container-fluid pt-3">
-        <div class="card text-center rounded-4 shadow-lg overflow-hidden">
+      <div class="container-fluid">
+        <div class="card card-cover text-center rounded-4 shadow-lg overflow-hidden">
           <div class="card-body">
             <h3 class="card-subtitle mb-2 text-body-secondary" id="location-name"></h3>
             <span class="card-title display-2" id="temp">--</span>
@@ -48,6 +48,29 @@
             <span href="#" class="card-link text-success">L:<span id="low"></span></span>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
+        <div class="card-body">
+          <span class="h5 text-body-secondary">forecast</span>
+          <span class="card-text">Last update</span>
+          <span class="text-body-secondary" id="current-date">yyyy-mm-dd</span>
+
+
+          <div class="row pt-3">
+            <div class="col-12">
+              <div class="overflow-x-auto">
+                <div class="mb-2" style="white-space: nowrap;">
+                  <ul id="hourly-list" class="d-flex list-unstyled mt-auto">
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
