set weather card & forecast card same size

--- a/index.html
+++ b/index.html
@@ -52,25 +52,50 @@
     </div>
 
     <div class="col">
-      <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
-        <div class="card-body">
-          <span class="h5 text-body-secondary">forecast</span>
-          <span class="card-text">Last update</span>
-          <span class="text-body-secondary" id="current-date">yyyy-mm-dd</span>
+      <div class="container-fluid">
+        <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
+          <div class="card-body">
+            <span class="h5 text-body-secondary">forecast &nbsp;</span>
+            <span class="card-text">Last update</span>
+            <span class="text-body-secondary" id="current-date">yyyy-mm-dd</span>
 
-
-          <div class="row pt-3">
-            <div class="col-12">
-              <div class="overflow-x-auto">
-                <div class="mb-2" style="white-space: nowrap;">
-                  <ul id="hourly-list" class="d-flex list-unstyled mt-auto">
-                  </ul>
+            <div class="row pt-4">
+              <div class="col-12">
+                <div class="overflow-x-auto">
+                  <div class="mb-2" style="white-space: nowrap;">
+                    <ul id="hourly-list" class="d-flex list-unstyled mt-auto">
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
+
           </div>
         </div>
+      </div>
+    </div>
 
+    <div class="col">
+      <div class="container-fluid">
+        <div class="card card-cover h-100 overflow-hidden rounded-4 shadow-lg">
+          <div class="card-body">
+            <span class="h5 text-body-secondary">forecast &nbsp;</span>
+            <span class="card-text">Last update</span>
+            <span class="text-body-secondary" id="...">yyyy-mm-dd</span>
+
+            <div class="row pt-4">
+              <div class="col-12">
+                <div class="overflow-x-auto">
+                  <div class="mb-2" style="white-space: nowrap;">
+                    <ul id="..." class="d-flex list-unstyled mt-auto">
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
     </div>
 
