--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.png">
 
 
@@ -15,13 +16,13 @@
 
 <body>
 
-  <div class="container pt-3">
+  <div class="container-fluid pt-3">
     <div class="row">
-      <div class="col-6">
+      <div class="col-4">
         <input type="text" class="form-control" placeholder="Search City..." id="cityInput">
       </div>
-      <div class="col-3">
-        <button class="btn btn-outline-primary" id="search-btn" onclick="run()">Search</button>
+      <div class="col-2">
+        <button class="btn btn-outline-primary" id="search-btn" onclick="run()"><i class="bi bi-search"></i></button>
       </div>
       <div class="col-3">
         <select class="form-select" id="languageSelect">
@@ -30,6 +31,9 @@
           <option value="si">Si</option>
           <option value="tam">Tam</option>
         </select>
+      </div>
+      <div class="col-3">
+        <button class="btn" id="search-btn" onclick="changeUnit()">C/F</button>
       </div>
     </div>
   </div>
@@ -145,17 +149,20 @@
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3">
           <a class="text-body-secondary" href="https://www.facebook.com/sapumal.chamara.3?mibextid=LQQJ4d"
-            target="_blank"><img src="./asset/img/facebook.svg" class="bi" width="24" height="24" />
+            target="_blank">
+            <i class="bi bi-facebook h4"></i>
           </a>
         </li>
         <li class="ms-3">
           <a class="text-body-secondary" href="#">
-            <img src="./asset/img/linkedin.svg" class="bi" width="24" height="24" />
+            <i class="bi bi-linkedin h4"></i>
+
           </a>
         </li>
         <li class="ms-3">
-          <a class="text-body-secondary" href="https://github.com/ChamaraSapumal" target="_blank"><img
-              src="./asset/img/github.svg" class="bi" width="24" height="24" /></a>
+          <a class="text-body-secondary" href="https://github.com/ChamaraSapumal" target="_blank">
+            <i class="bi bi-github h4"></i>
+          </a>
         </li>
       </ul>
     </footer>
