--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
                 <div class="mb-2">
                   <ul id="hourly-list" class="d-flex list-unstyled mt-auto">
                     <li class="me-auto">
-                      <h1>Humiby</h1>
+                      <h1 class="h1 text-success-emphasis">Wind</h1>
+                      <span class="h4 text-center justify-content-center" id="wind-speed">--Kph</span>
                     </li>
-                    <li class="me-auto">
-                      <h1>Cloud</h1>
+                    <li class="align-content-end">
+                      <img src="asset/img/wind-anime.gif" alt="">
                     </li>
                   </ul>
                 </div>
